--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://nanocba06.github.io/PreEntrega1Herrador",
+  "homepage": "https://nanocba06.github.io/PreEntrega2Herrador",
   "name": "preentrega1herrador",
   "private": true,
   "version": "0.0.0",
@@ -19,6 +19,8 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
+    "firebase": "^10.7.1",
+    "ldrs": "^1.0.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
